--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ let setupServer = async function() {
 };
 
 
-const provider = new ethers.providers.JsonRpcProvider('https://xdai-archive.blockscout.com');
+const provider = new ethers.providers.JsonRpcProvider('https://rpc.gnosischain.com/');
 const hubAbi = [
     "function name() view returns (string)",
     "function userToToken(address) view returns (address)",
